2005-05-21  Michael Koch  <konqueror@gmx.de>

	* src/gnu/localegen/PropertiesGenerator.java:
	Changed copyright header in generated locale data properties files.

2005-05-04  Michael Koch  <konqueror@gmx.de>

	* src/gnu/localegen/PropertiesGenerator.java:
	New file.
	* src/gnu/localegen/Main.java:
	Generate properties files instead of java classes.

2005-03-06  Sven de Marothy  <sven@physto.se>

	* src/gnu/ldml/Analyzer.java,
	(flattenBranch): Check for null elements.
	* src/gnu/ldml/Parser.java,
	Updated copyright.
	(Parser): Add week-related nodes.
	(SinglyAttributedNode): New parser element.
	* src/gnu/localegen/JavaGenerator.java,
	Updated copyright.
	(computeCalendar): Add support for week-related data.

2004-02-18  C. Brian Jones  <cbj@gnu.org>

	* configure.ac: typo fixed, patch by Archit Shah 
	<archit.shah@alum.mit.edu>

2004-02-16  C. Brian Jones  <cbj@gnu.org>

	* acinclude.m4: removed
	* m4: new directory
	* m4/ac_check_class.m4: new file from gjdoc
	* m4/ac_check_classpath.m4: ditto
	* m4/ac_check_home.m4: ditto
	* m4/ac_check_junit.m4: ditto
	* m4/ac_check_rqrd_class.m4: ditto
	* m4/ac_java_options.m4: ditto
	* m4/ac_prog_antlr.m4: ditto
	* m4/ac_prog_jar.m4: ditto
	* m4/ac_prog_java_cc.m4: ditto
	* m4/ac_prog_javac.m4: ditto
	* m4/ac_prog_javac_works.m4: ditto
	* m4/ac_prog_javadoc.m4: ditto
	* m4/ac_prog_javah.m4: ditto
	* m4/ac_prog_java.m4: ditto
	* m4/ac_prog_java_works.m4: ditto
	* m4/ac_try_run_javac.m4: ditto
	* m4/am_prog_gcj.m4: ditto
	* m4/ac_classpath_add.m4: new file
	* autogen.sh: copied from classpath for version checking

2005-02-08  C. Brian Jones  <cbj@gnu.org>

	* configure.ac: change --enable-gcj to --enable-native in keeping
	with gjdoc; the default in cp-tools is still to compile natively 
	if possible
	* Makefile.am: add nodist_ to _SOURCES including src/jar/bytecode.jar 
	for make distcheck; also added this file to DISTCLEANFILES
	* src/gnu/classpath/tools/rmi/registry/RegistryImpl.java: removed
	unused import statement
